# dme-api-proxy

./: .gitignore  README.md  install.sh  pyproject.toml
.reasonix/plans/: 000-architect-target.md
src/cli/: __init__.py  client.py  server.py
src/proxy/: __init__.py  models.py
src/proxy/client/: __init__.py  client.py  config.py
src/proxy/queue/: __init__.py  interface.py  memory.py
src/proxy/server/: __init__.py  app.py  handler.py
tests/: conftest.py  test_client.py  test_integration.py  test_models.py  test_queue_memory.py  test_server.py
