[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dme-proxy"
version = "0.1.0"
description = "DME API proxy system — transparent HTTP proxy to DME environment via message queue"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.scripts]
dme-proxy-server = "cli.server:main"
dme-proxy-client = "cli.client:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["proxy*", "cli*"]
